tests/integration/records/errors/closed-and-quantified/main.cx
fun f(r: {...}) {
  if True then r else {}
}

fun main() {
}
